# fga401-bot-adapter

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
src/fga401_bot_adapter/: context.py  main.py  utils.py
tests/: test_cvt.py
